# aws_lambda_telegram_agent

./: pyproject.toml  test
.claude/: settings.local.json
.github/workflows/: deploy_aws_lambda.yaml
src/telegram_agent_aws/: config.py
src/telegram_agent_aws/application/conversation_service/: generate_response.py
src/telegram_agent_aws/application/conversation_service/workflow/: graph.py  nodes.py  tools.py
src/telegram_agent_aws/application/rag_indexing_service/: index_documents.py
src/telegram_agent_aws/infrastructure/clients/: groq.py
src/telegram_agent_aws/infrastructure/telegram/: handlers.py
